--- a/flight_prediction.ipynb
+++ b/flight_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "4d61aa65",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "98946c6a",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "2e611051",
    "metadata": {},
    "outputs": [
@@ -239,7 +239,7 @@
        "[5 rows x 61 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "609845fd",
    "metadata": {},
    "outputs": [
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "88bbc187",
    "metadata": {},
    "outputs": [
@@ -345,7 +345,7 @@
        "(4078318, 61)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "282d47a5",
    "metadata": {},
    "outputs": [
@@ -656,7 +656,7 @@
        "[8 rows x 42 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -667,11 +667,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "93e4fecc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['FlightDate',\n",
+       " 'Airline',\n",
+       " 'Origin',\n",
+       " 'Dest',\n",
+       " 'Cancelled',\n",
+       " 'Diverted',\n",
+       " 'CRSDepTime',\n",
+       " 'DepTime',\n",
+       " 'DepDelayMinutes',\n",
+       " 'DepDelay',\n",
+       " 'ArrTime',\n",
+       " 'ArrDelayMinutes',\n",
+       " 'AirTime',\n",
+       " 'CRSElapsedTime',\n",
+       " 'ActualElapsedTime',\n",
+       " 'Distance',\n",
+       " 'Year',\n",
+       " 'Quarter',\n",
+       " 'Month',\n",
+       " 'DayofMonth',\n",
+       " 'DayOfWeek',\n",
+       " 'Marketing_Airline_Network',\n",
+       " 'Operated_or_Branded_Code_Share_Partners',\n",
+       " 'DOT_ID_Marketing_Airline',\n",
+       " 'IATA_Code_Marketing_Airline',\n",
+       " 'Flight_Number_Marketing_Airline',\n",
+       " 'Operating_Airline',\n",
+       " 'DOT_ID_Operating_Airline',\n",
+       " 'IATA_Code_Operating_Airline',\n",
+       " 'Tail_Number',\n",
+       " 'Flight_Number_Operating_Airline',\n",
+       " 'OriginAirportID',\n",
+       " 'OriginAirportSeqID',\n",
+       " 'OriginCityMarketID',\n",
+       " 'OriginCityName',\n",
+       " 'OriginState',\n",
+       " 'OriginStateFips',\n",
+       " 'OriginStateName',\n",
+       " 'OriginWac',\n",
+       " 'DestAirportID',\n",
+       " 'DestAirportSeqID',\n",
+       " 'DestCityMarketID',\n",
+       " 'DestCityName',\n",
+       " 'DestState',\n",
+       " 'DestStateFips',\n",
+       " 'DestStateName',\n",
+       " 'DestWac',\n",
+       " 'DepDel15',\n",
+       " 'DepartureDelayGroups',\n",
+       " 'DepTimeBlk',\n",
+       " 'TaxiOut',\n",
+       " 'WheelsOff',\n",
+       " 'WheelsOn',\n",
+       " 'TaxiIn',\n",
+       " 'CRSArrTime',\n",
+       " 'ArrDelay',\n",
+       " 'ArrDel15',\n",
+       " 'ArrivalDelayGroups',\n",
+       " 'ArrTimeBlk',\n",
+       " 'DistanceGroup',\n",
+       " 'DivAirportLandings']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.columns.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "cc5d2db7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ArrDelayMinutes         133402\n",
+       "AirTime                 133402\n",
+       "ActualElapsedTime       133402\n",
+       "ArrDel15                133402\n",
+       "ArrivalDelayGroups      133402\n",
+       "ArrDelay                133402\n",
+       "WheelsOn                124242\n",
+       "TaxiIn                  124242\n",
+       "ArrTime                 124239\n",
+       "TaxiOut                 122666\n",
+       "WheelsOff               122666\n",
+       "DepDelay                120495\n",
+       "DepDelayMinutes         120495\n",
+       "DepartureDelayGroups    120495\n",
+       "DepDel15                120495\n",
+       "DepTime                 120433\n",
+       "Tail_Number              26795\n",
+       "Quarter                      0\n",
+       "Month                        0\n",
+       "Distance                     0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.isna().sum().sort_values(ascending=False).head(20)\n"
+   ]
   }
  ],
  "metadata": {
