Added React Frontend

--- a/server/main.ipynb
+++ b/server/main.ipynb
@@ -64,6 +64,171 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 38,
+   "id": "260e1d30",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Airline</th>\n",
+       "      <th>Origin</th>\n",
+       "      <th>Dest</th>\n",
+       "      <th>CRSDepTime</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>DayOfWeek</th>\n",
+       "      <th>Distance</th>\n",
+       "      <th>DistanceGroup</th>\n",
+       "      <th>DepDel15</th>\n",
+       "      <th>DepDelayMinutes</th>\n",
+       "      <th>ArrDel15</th>\n",
+       "      <th>ArrDelayMinutes</th>\n",
+       "      <th>Cancelled</th>\n",
+       "      <th>Diverted</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>SkyWest Airlines Inc.</td>\n",
+       "      <td>FSM</td>\n",
+       "      <td>DFW</td>\n",
+       "      <td>617</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>227.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51</th>\n",
+       "      <td>SkyWest Airlines Inc.</td>\n",
+       "      <td>DFW</td>\n",
+       "      <td>FLG</td>\n",
+       "      <td>2045</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>853.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>148.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>105.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59</th>\n",
+       "      <td>SkyWest Airlines Inc.</td>\n",
+       "      <td>DFW</td>\n",
+       "      <td>ASE</td>\n",
+       "      <td>840</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>701.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>62</th>\n",
+       "      <td>SkyWest Airlines Inc.</td>\n",
+       "      <td>PHX</td>\n",
+       "      <td>IAH</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1009.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>66</th>\n",
+       "      <td>SkyWest Airlines Inc.</td>\n",
+       "      <td>PHX</td>\n",
+       "      <td>SLC</td>\n",
+       "      <td>1843</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>507.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>109.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Airline Origin Dest  CRSDepTime  Month  DayOfWeek  Distance  \\\n",
+       "36  SkyWest Airlines Inc.    FSM  DFW         617      3          3     227.0   \n",
+       "51  SkyWest Airlines Inc.    DFW  FLG        2045      3          3     853.0   \n",
+       "59  SkyWest Airlines Inc.    DFW  ASE         840      3          3     701.0   \n",
+       "62  SkyWest Airlines Inc.    PHX  IAH        2005      3          3    1009.0   \n",
+       "66  SkyWest Airlines Inc.    PHX  SLC        1843      3          3     507.0   \n",
+       "\n",
+       "    DistanceGroup  DepDel15  DepDelayMinutes  ArrDel15  ArrDelayMinutes  \\\n",
+       "36              1       1.0             22.0       0.0             14.0   \n",
+       "51              4       1.0            148.0       1.0            105.0   \n",
+       "59              3       1.0             18.0       0.0              4.0   \n",
+       "62              5       1.0             35.0       0.0              1.0   \n",
+       "66              3       1.0            109.0       1.0             89.0   \n",
+       "\n",
+       "    Cancelled  Diverted  \n",
+       "36      False     False  \n",
+       "51      False     False  \n",
+       "59      False     False  \n",
+       "62      False     False  \n",
+       "66      False     False  "
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['DepDel15']==1].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "b5df0527",
    "metadata": {},
