--- a/server/main.ipynb
+++ b/server/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "id": "e66b504b",
    "metadata": {},
    "outputs": [],
@@ -39,6 +39,26 @@
     "]\n",
     "\n",
     "df = pd.read_parquet('./data/2021_delay_ds.parquet', columns=cols)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "7d91513a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['SGU', 'PHX', 'MHT', 'DFW', 'ORD', 'PSP', 'LBB', 'FWA', 'DRO', 'LAX', 'SFO', 'JLN', 'SAF', 'ASE', 'HRL', 'DTW', 'GJT', 'SLC', 'FSM', 'FLG', 'GNV', 'ROW', 'SBN', 'MKE', 'DEN', 'OKC', 'YUM', 'BNA', 'BMI', 'EUG', 'SHV', 'IAH', 'MDT', 'EGE', 'TVC', 'GRR', 'IND', 'PIT', 'GRB', 'TRI', 'BUR', 'LFT', 'MFR', 'FAT', 'RDM', 'BIS', 'BRO', 'DSM', 'TLH', 'GSO', 'SBP', 'MTJ', 'BIL', 'SJT', 'MAF', 'BFL', 'MFE', 'ONT', 'COS', 'FAR', 'CID', 'LGB', 'ABQ', 'TUS', 'FSD', 'GRK', 'SYR', 'AMA', 'BTR', 'MSP', 'BHM', 'RNO', 'SEA', 'MCI', 'PDX', 'PSC', 'MSN', 'STL', 'BZN', 'GFK', 'SUN', 'SMF', 'BDL', 'SJC', 'FCA', 'BOI', 'JAC', 'LAS', 'OMA', 'GEG', 'IDA', 'GTF', 'DCA', 'OAK', 'MSO', 'RAP', 'DLH', 'AUS', 'CLE', 'HIB', 'LWS', 'CPR', 'SNA', 'CLT', 'PHL', 'EWR', 'IAD', 'CMH', 'EKO', 'SAT', 'IMT', 'HLN', 'INL', 'PIH', 'TUL', 'TWF', 'MQT', 'ESC', 'RHI', 'LSE', 'ABR', 'BJI', 'CDC', 'MEM', 'CHS', 'LAR', 'EAR', 'ATY', 'RST', 'CGI', 'SBA', 'TYS', 'ATL', 'ICT', 'LGA', 'RSW', 'AVL', 'SAV', 'PAE', 'CMX', 'EAU', 'DEC', 'RDD', 'GSP', 'BOS', 'CVG', 'ROC', 'FOD', 'SHR', 'PAH', 'HDN', 'ACV', 'SDF', 'LAN', 'JAX', 'HSV', 'SAN', 'MRY', 'MOT', 'MEI', 'ALB', 'MSY', 'SUX', 'GUC', 'XWA', 'LIT', 'MLI', 'DIK', 'ELP', 'MKG', 'LBL', 'VEL', 'JST', 'CHA', 'ABI', 'SHD', 'PBG', 'DVL', 'CYS', 'GCC', 'LWB', 'BFF', 'ALS', 'JMS', 'SLN', 'PIB', 'PRC', 'MCW', 'PIR', 'RKS', 'DDC', 'CKB', 'HYS', 'CNY', 'OGS', 'PUB', 'LBF', 'RIW', 'VCT', 'COD', 'XNA', 'LNK', 'SGF', 'OTH', 'HOB', 'LEX', 'BUF', 'PIA', 'CWA', 'PNS', 'VPS', 'ECP', 'STS', 'DAL', 'BTM', 'APN', 'CIU', 'MLU', 'RIC', 'TPA', 'PBI', 'PVD', 'BRD', 'PLN', 'FAI', 'SRQ', 'JAN', 'MOB', 'ATW', 'YKM', 'ALW', 'PUW', 'ANC', 'EAT', 'DLG', 'AKN', 'BLI', 'MIA', 'MCO', 'RDU', 'FLL', 'ORF', 'SJU', 'STT', 'LIH', 'KOA', 'OGG', 'HNL', 'BWI', 'GUM', 'ITO', 'JFK', 'SPN', 'PQI', 'MYR', 'LRD', 'LCH', 'CRP', 'ABE', 'BTV', 'MBS', 'CAK', 'GPT', 'AEX', 'CLL', 'ROA', 'SPI', 'PWM', 'COU', 'ERI', 'DAY', 'SCE', 'ILM', 'BGR', 'AVP', 'CHO', 'FNT', 'CAE', 'AZO', 'EVV', 'CRW', 'HOU', 'ISP', 'MDW', 'EYW', 'MLB', 'FAY', 'DAB', 'HVN', 'HHH', 'ACY', 'LBE', 'STX', 'TTN', 'ILG', 'PIE', 'SFB', 'PGD', 'PVU', 'USA', 'BLV', 'AZA', 'RFD', 'IAG', 'ELM', 'LCK', 'HGR', 'SWF', 'SCK', 'PSM', 'GRI', 'STC', 'OGD', 'TOL', 'HTS', 'SMX', 'OWB', 'DBQ', 'TYR', 'AGS', 'MHK', 'ACT', 'GCK', 'TXK', 'SPS', 'GGG', 'LAW', 'BPT', 'MGM', 'CMI', 'ALO', 'DRT', 'SWO', 'OAJ', 'HPN', 'EWN', 'PHF', 'VLD', 'ABY', 'DHN', 'BQK', 'CSG', 'BGM', 'GTR', 'ITH', 'SBY', 'FLO', 'LYH', 'PGV', 'IPT', 'ART', 'ADQ', 'BET', 'BRW', 'SCC', 'JNU', 'KTN', 'CDV', 'YAK', 'WRG', 'PSG', 'SIT', 'OME', 'OTZ', 'CDB', 'ADK', 'ORH', 'BQN', 'PSE', 'PPG', 'TBN', 'BIH', 'BKG', 'WYS', 'ACK', 'MVY', 'HYA', 'MKK', 'LNY', 'GST']\n"
+     ]
+    }
+   ],
+   "source": [
+    "airlines = df['Origin'].unique()\n",
+    "\n",
+    "print(airlines.tolist())\n"
    ]
   },
   {
@@ -8129,6 +8149,30 @@
     "joblib.dump(final_model, \"flight_delay_model.pkl\")\n",
     "joblib.dump(preprocessor, \"flight_delay_preprocessor.pkl\")\n",
     "joblib.dump(best_threshold, \"flight_delay_threshold.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "8b4cdde7",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df_departed' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m airlines = \u001b[43mdf_departed\u001b[49m[\u001b[33m\"\u001b[39m\u001b[33mAirline\u001b[39m\u001b[33m\"\u001b[39m].unique()\n\u001b[32m      3\u001b[39m \u001b[38;5;28mprint\u001b[39m(airlines)\n",
+      "\u001b[31mNameError\u001b[39m: name 'df_departed' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "airlines = df_departed[\"Airline\"].unique()\n",
+    "\n",
+    "print(airlines)\n"
    ]
   }
  ],
