Fixed FastAPi, Improved features

--- a/server/main.ipynb
+++ b/server/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "e66b504b",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "c7c20e0b",
    "metadata": {},
    "outputs": [],
@@ -39,6 +39,115 @@
     "]\n",
     "\n",
     "df = pd.read_parquet('./data/2021_delay_ds.parquet', columns=cols)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "915800e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Air Wisconsin Airlines Corp': 0.16764815313754924,\n",
+       " 'Alaska Airlines Inc.': 0.14696088610114422,\n",
+       " 'Allegiant Air': 0.26475442744345806,\n",
+       " 'American Airlines Inc.': 0.18065830995183946,\n",
+       " 'Capital Cargo International': 0.11190036994384599,\n",
+       " 'Comair Inc.': 0.1286960308064933,\n",
+       " 'Commutair Aka Champlain Enterprises, Inc.': 0.20981150379282934,\n",
+       " 'Delta Air Lines Inc.': 0.1172869936183045,\n",
+       " 'Empire Airlines Inc.': 0.10714285714285714,\n",
+       " 'Endeavor Air Inc.': 0.0794972157362601,\n",
+       " 'Envoy Air': 0.1374443179321228,\n",
+       " 'Frontier Airlines Inc.': 0.218179398849742,\n",
+       " 'GoJet Airlines, LLC d/b/a United Express': 0.16945181407848947,\n",
+       " 'Hawaiian Airlines Inc.': 0.087970411158841,\n",
+       " 'Horizon Air': 0.11679877409174245,\n",
+       " 'JetBlue Airways': 0.26254748849750903,\n",
+       " 'Mesa Airlines Inc.': 0.19021497405485543,\n",
+       " 'Republic Airlines': 0.11788432941779975,\n",
+       " 'SkyWest Airlines Inc.': 0.1450914116421673,\n",
+       " 'Southwest Airlines Co.': 0.26860629155258664,\n",
+       " 'Spirit Air Lines': 0.20262574283007492,\n",
+       " 'United Air Lines Inc.': 0.1668851730207407}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "airline_delay_rate = df.groupby(\"Airline\")[\"DepDel15\"].mean().to_dict()\n",
+    "\n",
+    "airline_delay_rate\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "e3a1e2b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "origin_delay_rate = df.groupby(\"Origin\")[\"DepDel15\"].mean().to_dict()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "eb178705",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"Route\"] = df[\"Origin\"] + \"_\" + df[\"Dest\"]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ef9738b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "route_delay_rate = df.groupby(\"Route\")[\"DepDel15\"].mean().to_dict()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "47b9bae0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"DepHour\"] = df[\"CRSDepTime\"] // 100\n",
+    "hour_delay_rate = df.groupby(\"DepHour\")[\"DepDel15\"].mean().to_dict()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "27b5cb55",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['hour_delay_rate.pkl']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(airline_delay_rate, \"airline_delay_rate.pkl\")\n",
+    "joblib.dump(origin_delay_rate, \"origin_delay_rate.pkl\")\n",
+    "joblib.dump(route_delay_rate, \"route_delay_rate.pkl\")\n",
+    "joblib.dump(hour_delay_rate, \"hour_delay_rate.pkl\")\n"
    ]
   },
   {
@@ -560,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "59c37567",
    "metadata": {},
    "outputs": [
@@ -570,7 +679,7 @@
        "(6203458, 14)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8153,19 +8262,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "8b4cdde7",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'df_departed' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m airlines = \u001b[43mdf_departed\u001b[49m[\u001b[33m\"\u001b[39m\u001b[33mAirline\u001b[39m\u001b[33m\"\u001b[39m].unique()\n\u001b[32m      3\u001b[39m \u001b[38;5;28mprint\u001b[39m(airlines)\n",
-      "\u001b[31mNameError\u001b[39m: name 'df_departed' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<ArrowStringArray>\n",
+      "[                    'SkyWest Airlines Inc.',\n",
+      "                               'Horizon Air',\n",
+      "                     'United Air Lines Inc.',\n",
+      " 'Commutair Aka Champlain Enterprises, Inc.',\n",
+      "  'GoJet Airlines, LLC d/b/a United Express',\n",
+      "               'Air Wisconsin Airlines Corp',\n",
+      "                    'Southwest Airlines Co.',\n",
+      "                        'Mesa Airlines Inc.',\n",
+      "                         'Republic Airlines',\n",
+      "                          'Spirit Air Lines',\n",
+      "                      'Delta Air Lines Inc.',\n",
+      "                    'Frontier Airlines Inc.',\n",
+      "                             'Allegiant Air',\n",
+      "                    'Hawaiian Airlines Inc.',\n",
+      "                                 'Envoy Air',\n",
+      "                               'Comair Inc.',\n",
+      "                         'Endeavor Air Inc.',\n",
+      "                    'American Airlines Inc.',\n",
+      "               'Capital Cargo International',\n",
+      "                      'Alaska Airlines Inc.',\n",
+      "                           'JetBlue Airways',\n",
+      "                      'Empire Airlines Inc.']\n",
+      "Length: 22, dtype: str\n"
      ]
     }
    ],
